Polish the code