@@ -11,7 +11,6 @@ import com.group2022103.flightkiosk.exception.UnboundPageException;
 
 public class PageFrm extends JFrame{
 	private JPanel contentPane;
-	private RoundButtonUI back,next;
 	private JLabel backgroundImage;
 	public PageFrm() {
 		contentPane = new JPanel() {{
@@ -27,7 +26,7 @@ public class PageFrm extends JFrame{
 
 	public void addExitButton(){
 		add(new JButton() {{
-			setIcon(new ImageIcon("src/main/resources/image/exit.png") {{
+			setIcon(new ImageIcon(ClassLoader.getSystemResource("image/exit.png")) {{
 				setImage(this.getImage().getScaledInstance(40,40,Image.SCALE_DEFAULT));
 			}});
 			setBackground(Color.WHITE);
@@ -43,7 +42,7 @@ public class PageFrm extends JFrame{
 
 	public void addHelpButton(){
 		add(new JButton() {{
-			setIcon(new ImageIcon("src/main/resources/image/question.png") {{
+			setIcon(new ImageIcon(ClassLoader.getSystemResource("image/question.png")) {{
 				setImage(this.getImage().getScaledInstance(40,40,Image.SCALE_DEFAULT));
 			}});
 			setBackground(Color.WHITE);
@@ -76,7 +75,7 @@ public class PageFrm extends JFrame{
 	}
 	
 	public void setBackButton() {
-		add(back = new RoundButtonUI("Back", new Color(198,198,198), new Color(148,148,148)) {{
+		add(new RoundButtonUI("Back", new Color(198,198,198), new Color(148,148,148)) {{
 			setForeground(Color.WHITE);
 			setBounds(25,460,75,30);
 			addActionListener(new ActionListener() {
@@ -88,7 +87,7 @@ public class PageFrm extends JFrame{
 	}
 	
 	public void setNextButton() {
-		add(next = new RoundButtonUI("Next", new Color(0,131,255), new Color(0,105,206)) {{
+		add(new RoundButtonUI("Next", new Color(0,131,255), new Color(0,105,206)) {{
 			setForeground(Color.WHITE);
 			setBounds(850,460,75,30);
 			addActionListener(new ActionListener() {
@@ -127,7 +126,7 @@ public class PageFrm extends JFrame{
 		}}, JLayeredPane.DEFAULT_LAYER);
         contentPane.setOpaque(false);
         getLayeredPane().setLayout(null);
-        getLayeredPane().add(backgroundImage, new Integer(Integer.MIN_VALUE));
+        getLayeredPane().add(backgroundImage, Integer.valueOf(Integer.MIN_VALUE));
         getLayeredPane().setBackground(Color.WHITE);
 	}
 		
@@ -137,7 +136,7 @@ public class PageFrm extends JFrame{
 		}}, JLayeredPane.DEFAULT_LAYER);
         contentPane.setOpaque(false);
         getLayeredPane().setLayout(null);
-        getLayeredPane().add(backgroundImage,new Integer(Integer.MIN_VALUE+1));
+        getLayeredPane().add(backgroundImage,Integer.valueOf(Integer.MIN_VALUE+1));
         getLayeredPane().setBackground(Color.WHITE);
 	}
 }
